# FRED

./: .replit  LOCAL_DEVELOPMENT.md  README.local.md  jsconfig.json  package-lock.json  package.json  pyproject.toml  replit.nix  run-client.js  run-dev.js  run-server.js  start-dev.sh  tailwind.config.ts  theme.json  vite.config.local.js  vite.config.ts
attached_assets/: Pasted--vite-connecting-Failed-to-fetch-system-status-TypeError-at-t-value-https-5b13b98c-b461-1744094272836.txt  Pasted--workspace-python-server-server-py-Starting-FastAPI-server-on-port-5000-INFO-Will-watch-for-c-1744006719780.txt  Pasted-API-requests-will-be-proxied-to-http-localhost-5002-6-58-01-AM-vite-client-Re-optimizing-depe-1743663695233.txt  Pasted-Client-will-be-available-at-http-localhost-5173-API-requests-will-be-proxied-to-http-localhost-1743663838404.txt  Pasted-Failed-to-fetch-at-window-fetch-https-5b13b98c-b461-4ae0-a637-9b440340453f-00-2vmnehdxb25fq-kirk--1744094469864.txt  Pasted-Failed-to-fetch-system-status-TypeError-at-t-value-https-5b13b98c-b461-4ae0-a637-9b44034045-1744095060586.txt  Pasted-GET-http-0-0-0-0-5002-api-market-indicators-Error-connect-ECONNREFUSED-0-0-0-0-5002--1744006989285.txt  Pasted-Project-Requirements-Financial-Market-Data-Pipeline-1-Overview-The-Financial-Market-Data-Pipeli-1742787631980.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx
server/: index.ts  routes.ts  server.py  storage.ts  theme.json  vite.ts
server/api/: analysis.ts  etl.ts  market.ts
server/fastapi_app/: __init__.py  main.py  models.py  storage.py  (+1 more)
shared/: schema.ts
(+21 files in other folders)
